test/parsing/errors/nameLength/longName.chpl
require "longNameHelper.chpl";
use LongName;
